# sigma-racer-sidearm

./: .gitignore  Cargo.toml  README.md  build.rs  link-rsc.x  memory-ddr.x  memory-itcm.x  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: M7_BRINGUP.md
scripts/: load-m7.sh  package-deb.sh
sigma-racer-wingman-m7-can/: Cargo.toml
sigma-racer-wingman-m7-can/src/: lib.rs
src/: cached.rs  database.rs  decode.rs  encode.rs  heartbeat.rs  lib.rs  main.rs  message.rs  performance_mode.rs  rpmsg.rs  safety_bus.rs  signals.rs  wire.rs
src/hw/: clock.rs  flexcan.rs  mod.rs  mpu.rs  mu.rs  reg.rs  rpmsg.rs  rsc_table.rs  uart.rs
src/hw/flexcan/: rx_frame.rs
src/hw/rsc_table/: imx_vendor.rs  mod.rs  resource_hdr.rs  sync_table.rs  table.rs  vdev.rs  vring.rs
