[package]
name = "cafe-racer-sidearm"
version = "0.1.0"
description = "All-Rust M7 safety-core firmware for the Sigma Racer Wingman cluster (i.MX8M Plus Cortex-M7)"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
publish = false

# Standalone firmware crate — its own workspace so the bare-metal target and
# linker config never leak into (or fight with) the std host workspaces.
[workspace]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"

# Async runtime. The thread-mode executor is chip-agnostic (it only needs a
# Cortex-M), so it runs on the i.MX8MP M7 with no vendor HAL.
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.1", features = ["tick-hz-1_000"] }
# `embassy-time` needs a global time driver; there is no i.MX8MP-M7 HAL to
# supply one, so we register a SysTick-backed driver (see `src/time.rs`).
embassy-time-driver = "0.2"
systick-timer = { version = "0.2.3", features = ["embassy-time-driver"] }

# The shared M7 CAN contract — same message IDs/scaling/codec the Linux
# sigma-racer-vehicle uses. `heapless` keeps the reactive path allocation-free
# (DBC table capacities are set in .cargo/config.toml).
sigma-racer-wingman-m7-can = { path = "../sigma-instrumentation/sigma-racer-wingman-m7-can", default-features = false, features = ["heapless"] }

[profile.dev]
panic = "abort"

[profile.release]
debug = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
