[workspace]
members = ["sigma-racer-wingman-m7-can"]
resolver = "2"

[package]
name = "sigma-racer-sidearm"
version = "0.1.0"
description = "All-Rust M7 safety-core firmware for the Sigma Racer Wingman cluster (i.MX8M Plus Cortex-M7)"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-racer-sidearm"
homepage = "https://github.com/sigmatactical-org/sigma-racer-sidearm"
publish = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"

# Async runtime. The thread-mode executor is chip-agnostic (it only needs a
# Cortex-M), so it runs on the i.MX8MP M7 with no vendor HAL.
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5.1", features = ["tick-hz-1_000"] }
# `embassy-time` needs a global time driver; there is no i.MX8MP-M7 HAL to
# supply one, so we register a SysTick-backed driver (see `src/time.rs`).
embassy-time-driver = "0.2"
systick-timer = { version = "0.2.3", features = ["embassy-time-driver"] }

# M7 safety-bus CAN contract — co-located in this workspace; `heapless` keeps
# the reactive path allocation-free (DBC table capacities in .cargo/config.toml).
sigma-racer-wingman-m7-can = { path = "sigma-racer-wingman-m7-can", default-features = false, features = ["heapless"] }

[profile.dev]
panic = "abort"

[profile.release]
debug = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
