[package]
name = "sigma-racer-sidearm"
version = "0.1.0"
description = "M7 safety-bus CAN contract and Sigma Racer Wingman Cortex-M7 firmware"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
repository = "https://github.com/sigmatactical-org/sigma-racer-sidearm"
homepage = "https://github.com/sigmatactical-org/sigma-racer-sidearm"
publish = false

[lib]
name = "sigma_racer_sidearm"

[[bin]]
name = "sigma-racer-sidearm"
path = "src/bin/sidearm/main.rs"
required-features = ["firmware"]

[features]
default = ["std"]
# Linux consumers (sigma-racer-vehicle, sigma-racer-efi host tests) use `std`.
std = ["alloc", "dbc-rs/std"]
alloc = ["dbc-rs/alloc"]
heapless = ["dbc-rs/heapless"]
firmware = [
    "heapless",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:panic-halt",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:embassy-time-driver",
    "dep:systick-timer",
]

[dependencies]
# Pinned to the 0.5 line so a single dbc-rs version stays in the tree and the
# parsed `Dbc` remains type-compatible with mdf4-rs's `CanDbcLogger`.
dbc-rs = { version = "0.5", default-features = false }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"], optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
panic-halt = { version = "1.0.0", optional = true }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"], optional = true }
embassy-time = { version = "0.5.1", features = ["tick-hz-1_000"], optional = true }
embassy-time-driver = { version = "0.2", optional = true }
systick-timer = { version = "0.2.3", features = ["embassy-time-driver"], optional = true }

[profile.dev]
panic = "abort"

[profile.release]
debug = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
